--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,6 +1,6 @@
-$color--main: #231a06;
+$color--main: #403212;
 $color--fade-main: #75553d;
-$color--dark-main: #583821;
+$color--dark-main: #231a06;
 $color--gray-main: #657160;
 $color--fade-dark-main: #3F4D38;
 $color--light-main: #d0e3d0;
