--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,5 +1,5 @@
-$color--main: #403212;
-$color--fade-main: #75553d;
+$color--main: #50401a;
+$color--fade-main: #4e390e;
 $color--dark-main: #231a06;
 $color--gray-main: #657160;
 $color--fade-dark-main: #3F4D38;
